[package]
name = "cyrly"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["serde/std"]

[dependencies]
ryu = "1.0.13"
serde = { version = "1.0.159", default-features = false }
urlencoding = "2.1.2"

[dev-dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.19"

[lib]
path = "lib.rs"

[workspace]
members = ["bin"]
