[package]
name = "cyrly"
description = "A serde-based YAML serializer for Rust with an unusual output style"
version = "0.1.0"
edition = "2021"
authors = ["Julius Michaelis <gitter@liftm.de>"]
repository = "https://github.com/jcaesar/cyrly"
license = "MIT"
keywords = ["yaml", "serde", "serialization"]
categories = ["encoding", "parser-implementations"]
readme = "README.md"
rust-version = "1.62"

[features]
default = ["std"]
std = ["serde/std"]

[dependencies]
ryu = "1.0.13"
serde = { version = "1.0.159", default-features = false }
urlencoding = "2.1.2"

[dev-dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.19"

[lib]
path = "lib.rs"

[workspace]
members = ["bin"]
