[package]
name = "curly_yaml-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_yaml = "0.9.19"
arbitrary = { version = "1.3.0", features = ["derive"] }
serde = "1.0.159"

[dependencies.curly_yaml]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false

[[bin]]
name = "yaml-input"
path = "fuzz_targets/yaml-input.rs"
test = false
doc = false
